Mon Jul 20 20:35:55 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_f_open): add rdoc about specifying ext_enc as *-bom.

Mon Jul 20 19:00:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (compile_dstr_fragments): reduced needless literal.

	* parse.y (xstring, regexp, dsym, literal_concat, evstr2dstr):
	  literal at the top of dstr is no longer needed if it is empty,
	  since concatstrings and toregexp always create new strings.

Mon Jul 20 12:51:39 2009  wanabe  <s.wanabe@gmail.com>

	* lib/matrix.rb (Matrix#rank): revert a part of r20859 to avoid
	  infinite loop.  [Bug #1020]

Mon Jul 20 11:12:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, Makefile.in (TEST_RUNNABLE): tests are no
	  runnable if cross-compiling.

	* common.mk (btest*, test*): ditto.

Mon Jul 20 10:55:18 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Addrinfo#family_addrinfo): fix a typo in
	  error message.  patch by Nobuhiro IMAI.  [ruby-dev:38828]

Sun Jul 19 22:22:54 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* rational.c (float_to_r): an improvement.

Sun Jul 19 20:41:24 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (make_patterns): do not use \d.

	* rational.c (make_patterns): ditto.

Sun Jul 19 17:32:37 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_read): should taint the result.  [ruby-dev:38826]

Sun Jul 19 11:00:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_method.c (me_opts): fixed optimized method aliasing.
	  [ruby-dev:38824]

Sun Jul 19 10:54:56 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.accept_loop): rescue
	  IO::WaitReadable instead of Errno::EWOULDBLOCK.
	  (Socket.udp_server_loop_on): ditto.

Sat Jul 18 23:44:59 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (reg_enc_error): use rb_enc_get to get the encoding of
	  a Regexp object. REGEXP(re)->ptr->enc is the encoding of the
	  regexp engin for patterns and target strings.
	  [ruby-core:23208]
